@@ -153,6 +153,7 @@ necessary to develop qmail applications
 %attr(644,root,root)                    %{_prefix}/include/qmail/now.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/open.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/openreadclose.h
+%attr(644,root,root)                    %{_prefix}/include/qmail/pathexec.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/pw_comp.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/qprintf.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/readclose.h
