@@ -12,6 +12,8 @@ Release 1.1 Start 14/02/2021
     -Warray-parameter
 - 04/05/2021
 06. Removed linking libqmail with openssl library
+- 12/05/2021
+07. added pathexec_run.c, pathexec_env.c, pathexec.h
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
